--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ grpcio-tools = "1.70.0"
 psycopg2-binary = "^2.9.10"
 alembic = "^1.14.1"
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+grpcio-reflection = "^1.70.0"
 
 [tool.poetry.group.docs.dependencies]
 # Doc Checks
